<resources>
    <string name="app_name">OFFICE TIME TRACKER</string>
    <string name="edit_email">E-mail</string>
    <string name="btn_submit">Submit</string>
    <string name="edit_name">Name</string>
    <string name="edit_pass">Password</string>
    <string name="btn_login">Login</string>
    <string name="label_register">Need to register?</string>
    <string name="label_login">Already registered? Log in here</string>
    <string name="btnProfile">Profile</string>
    <string name="btnProjects">Projects</string>
    <string name="btnReports">Reports</string>
    <string name="btnSignOut">Sign Out</string>
    <string name="btnNewSession">New Session</string>

    <string name="newUsername">New Username</string>
    <string name="newEmail">New Email</string>
    <string name="newPassword">New Password</string>
    <string name="oldPassword">Introduce the old password to confirm</string>
    <string name="btnUpdateProfile">Update Profile</string>

    <string name="btnAddProject">Add Project</string>
    <string name="btnUpdateProject">Update</string>
    <string name="btnDeleteProject">Delete</string>

    <string name="tvManager">Manager</string>
    <string name="tvProjectName">Project Name</string>
    <string name="tvProjectDescription">Project Description</string>

    <string name="etPID">ID</string>
    <string name="etPName">Project Name</string>
    <string name="etPDescription">Project Description</string>


</resources>
