<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProjectActivity">

    <Button
        android:id="@+id/btnDeleteProject"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginBottom="112dp"
        android:text="@string/btnDeleteProject"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/etPName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvProjectName"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etProjectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/etPDescription"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvProjectDescription"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvProjectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/tvProjectName"
        app:layout_constraintEnd_toStartOf="@+id/etProjectName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvManager" />

    <TextView
        android:id="@+id/tvProjectDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/tvProjectDescription"
        app:layout_constraintEnd_toStartOf="@+id/etProjectDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProjectName" />

    <TextView
        android:id="@+id/tvManager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/tvManager"
        app:layout_constraintEnd_toStartOf="@+id/tvManagerName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvManagerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:text="Manager Name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvManager"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAddProject"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnAddProject"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateProject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUpdateProject"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnUpdateProject"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteProject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>