<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProjectsActivity">

    <TableLayout
        android:id="@+id/tlProjects"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="30dp">


        <TableRow>

            <Button
                android:id="@+id/btnAddProject"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btnAddProject"></Button>

            <Button
                android:id="@+id/btnEditProject"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/btnEditProject"></Button>

            <Button
                android:id="@+id/btnDeleteProject"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:text="@string/btnDeleteProject"></Button>

            <Button
                android:id="@+id/btnSeeInfo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/btnSeeInfo"></Button>
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/etProjectName"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:hint="@string/etPName"
                android:inputType="text"></EditText>
        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/etProjectDescription"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:hint="@string/etPDescription"
                android:inputType="text"></EditText>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/etPID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="#d0d0d0"
                android:gravity="center"
                android:text="@string/etPID"></TextView>

            <TextView
                android:id="@+id/etPName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="#d0d0d0"
                android:gravity="center"
                android:text="@string/etPName"></TextView>

            <TextView
                android:id="@+id/etPDEscription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#d0d0d0"
                android:gravity="center"
                android:text="@string/etPDescription"></TextView>
        </TableRow>
    </TableLayout>

</androidx.appcompat.widget.LinearLayoutCompat>